# streamdeck-server

./: Cargo.toml  bidirectional_channel.rs  test.html
demo/: levykanta.html
src/: main.rs
