[package]
name = "streamdeck-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
streamdeck = "0.7.0"
tokio = { version = "1.26.0", features = ["rt", "macros", "rt-multi-thread"] }
warp = "0.3.3"
